fixing task overflow & setting fixed dimension to icon

--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -5,8 +5,68 @@
     position: relative;
 }
 
+.input-container {
+    margin-right: 2.8rem;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+input[type=checkbox] {
+    --width: 30px;
+    width: var(--width);
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    aspect-ratio: 1/1;
+    border: 2px solid var(--accent-clr);
+}
+
+input[type=checkbox]:checked {
+    background-color: var(--cta-clr);
+    border: 2px solid var(--cta-clr);
+}
+
+input[type=checkbox]:checked+.task-container label {
+    text-decoration: line-through;
+}
+
+input[type=checkbox]:checked::before {
+    content: "\2713";
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+label:hover,
+input[type=checkbox]:hover {
+    cursor: pointer;
+}
+
+
+label {
+    font-size: 1.1rem;
+}
+
+.task-container {
+    margin-left: 2.2rem;
+    width: 82%;
+}
+
 .task-wrapper .svg {
-    position: relative;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
     cursor: pointer;
     font-size: 1.2rem;
     z-index: 1;
@@ -31,8 +91,8 @@
     aspect-ratio: 1/1;
     background-color: var(--secondary-clr);
     transition: all 200ms ease-in-out;
-  }
-  
+}
+
 
 .task-wrapper .svg:hover::before {
     display: block;
@@ -43,55 +103,31 @@
 }
 
 @keyframes wobble {
-0% { transform: translateX(0%); }
-15% { transform: translateX(-25%) rotate(-5deg); }
-30% { transform: translateX(20%) rotate(3deg); }
-45% { transform: translateX(-15%) rotate(-3deg); }
-60% { transform: translateX(10%) rotate(2deg); }
-75% { transform: translateX(-5%) rotate(-1deg); }
-100% { transform: translateX(0%); }
-}
+    0% {
+        transform: translateX(0%);
+    }
 
-input[type=checkbox] {
-    --width: 30px;
-    width: var(--width);
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    aspect-ratio: 1/1;
-    border: 2px solid var(--accent-clr);
-}
+    15% {
+        transform: translateX(-25%) rotate(-5deg);
+    }
 
-input[type=checkbox]:checked {
-    background-color: var(--cta-clr);
-    border: 2px solid var(--cta-clr);
-}
+    30% {
+        transform: translateX(20%) rotate(3deg);
+    }
 
-input[type=checkbox]:checked + label {
-    text-decoration: line-through;
-}
+    45% {
+        transform: translateX(-15%) rotate(-3deg);
+    }
 
-input[type=checkbox]:checked::before {
-    content: "\2713";
-    color: white;
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
+    60% {
+        transform: translateX(10%) rotate(2deg);
+    }
 
-label:hover,
-input[type=checkbox]:hover {
-    cursor: pointer;
-}
+    75% {
+        transform: translateX(-5%) rotate(-1deg);
+    }
 
-
-label {
-    margin-left: 2.8rem;
-    font-size: 1.1rem;
+    100% {
+        transform: translateX(0%);
+    }
 }
